--- a/UniEatsFrontend/src/app/Login/login/login.component.html
+++ b/UniEatsFrontend/src/app/Login/login/login.component.html
@@ -1,14 +1,14 @@
-<div class="container vh-100 d-flex justify-content-center align-items-center" id="login-container">
-  <div class="card p-4 text-dark shadow-lg" id="login-card">
-    <h2 class="text-center fw-bold mb-4">Login</h2>
+<div class="container vh-100 d-flex justify-content-center align-items-center">
+  <div class="card p-4 text-dark shadow-lg text-start">
+    <h2 class="fw-bold mb-4">Login</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="mb-3">
         <label for="email" class="form-label fw-semibold">Email</label>
-        <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter your email" required />
+        <input type="email" class="form-control" formControlName="email" placeholder="Enter your email" required />
       </div>
       <div class="mb-3">
         <label for="password" class="form-label fw-semibold">Password</label>
-        <input type="password" class="form-control" id="password" formControlName="password" placeholder="Enter your password" required />
+        <input type="password" class="form-control" formControlName="password" placeholder="Enter your password" required />
       </div>
       
       <button type="submit" class="btn btn-primary w-100 fw-semibold" [disabled]="!loginForm.valid">Login</button>
