--- a/UniEatsFrontend/src/styles.css
+++ b/UniEatsFrontend/src/styles.css
@@ -1,7 +1,7 @@
 html, body {
-   
-    margin: 0;
-   
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+  background: url('/background.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
   
