--- a/UniEatsFrontend/src/app/Login/login/login.component.html
+++ b/UniEatsFrontend/src/app/Login/login/login.component.html
@@ -11,7 +11,10 @@
         <input type="password" class="form-control" formControlName="password" placeholder="Enter your password" required />
       </div>
       
-      <button type="submit" class="btn btn-primary w-100 fw-semibold" [disabled]="!loginForm.valid">Login</button>
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <button type="submit" class="btn btn-primary w-50 fw-semibold me-2" [disabled]="!loginForm.valid">Login</button>
+        <button type="button" class="btn btn-secondary w-50 fw-semibold ms-2" (click)="navigateToRegister()">Register</button>
+      </div>
     </form>
   </div>
 </div>
