--- a/UniEatsFrontend/src/app/pre-loader/pre-loader/pre-loader.component.html
+++ b/UniEatsFrontend/src/app/pre-loader/pre-loader/pre-loader.component.html
@@ -1,3 +1,5 @@
-<div class="preloader">
-    <div class="spinner"></div>
+<div class="preloader d-flex justify-content-center align-items-center position-fixed top-0 start-0 w-100 h-100 bg-white bg-opacity-75">
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
   </div>
+</div>
