--- a/UniEatsFrontend/src/app/Login/login/login.component.html
+++ b/UniEatsFrontend/src/app/Login/login/login.component.html
@@ -1,20 +1,33 @@
 <div class="container vh-100 d-flex justify-content-center align-items-center">
-  <div class="card p-4 text-dark shadow-lg text-start">
-    <h2 class="fw-bold mb-4">Login</h2>
+  <div class="card p-4 text-dark shadow-lg text-start" style="max-width: 400px; width: 100%;">
+    <h2 class="fw-bold mb-4 text-center">Login</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="mb-3">
         <label for="email" class="form-label fw-semibold">Email</label>
-        <input type="email" class="form-control" formControlName="email" placeholder="Enter your email" required />
+        <input type="email" id="email" class="form-control" formControlName="email"
+         placeholder="Enter your email" />
       </div>
+      
       <div class="mb-3">
         <label for="password" class="form-label fw-semibold">Password</label>
-        <input type="password" class="form-control" formControlName="password" placeholder="Enter your password" required />
+        <input 
+          type="password" 
+          id="password"
+          class="form-control" 
+          formControlName="password" 
+          placeholder="Enter your password"
+        />
       </div>
       
       <div class="d-flex justify-content-between align-items-center mb-4">
-        <button type="submit" class="btn btn-primary w-50 fw-semibold me-2" [disabled]="!loginForm.valid">Login</button>
-        <button type="button" class="btn btn-secondary w-50 fw-semibold ms-2" (click)="navigateToRegister()">Register</button>
+        <button type="submit" class="btn btn-primary w-50 fw-semibold me-2" [disabled]="!loginForm.valid">
+          Login
+        </button>
+        <button type="button" class="btn btn-secondary w-50 fw-semibold ms-2" (click)="navigateToRegister()">
+          Register
+        </button>
       </div>
     </form>
+    
   </div>
 </div>
