--- a/UniEatsFrontend/src/app/Student/student/student.component.html
+++ b/UniEatsFrontend/src/app/Student/student/student.component.html
@@ -25,7 +25,8 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <div class="vh-100 w-100" style="background-color: #f0f0f0 !important;">
+    <!-- Hero Section -->
   <section class="hero d-flex justify-content-center align-items-center" style="height: 200px; background-color: #f0f0f0;">
     <h1 class="display-4">Welcome to UniEats!</h1>
   </section>
@@ -62,8 +63,10 @@
       </div>
     </div>
   </section>
+    <!-- Footer -->
+    <footer class="text-center mt-5">
+      <p>&copy; 2023 UniEats. All rights reserved.</p>
+    </footer>
+  
+  </div>
 
-  <!-- Footer -->
-  <footer class="text-center mt-5">
-    <p>&copy; 2023 UniEats. All rights reserved.</p>
-  </footer>
